--- a/src/core/server/email-templates/welcome.html
+++ b/src/core/server/email-templates/welcome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN       " "http://www.w3.org/TR/html4/loose.dtd">
 
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
@@ -22,14 +22,19 @@
 
                                         <!-- START OF EMAIL CONTENT -->
                                         <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><strong>Hello!</strong></p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Good news! You've successfully created a brand new Ghost blog over on  {{ siteUrl }} </p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">You can log in to your admin account with the following details:</p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"> Email Address:  {{ownerEmail}} <br>
-                                            Password: The password you chose when you signed up</p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Keep this email somewhere safe for future reference, and have fun!</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">祝贺！你的 Ghost 博客已经成功创建了：{{ siteUrl }}</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">现在就可以登录进来与 Ghost 亲密接触了，登录账号和密码如下：</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"> E邮箱地址：  {{ownerEmail}}<br>
+                                            密码： 是注册时你所输入的密码</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">请将此邮件妥善保管。</p>
                                         <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">xoxo</p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Team Ghost<br>
-                                            <a href="https://ghost.org" style="color: #5ba4e5;">https://ghost.org</a></p>
+                                        <br><br>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Ghost中国：<br>
+                                            <a href="http://www.ghostchina.com" style="color: #5ba4e5;">http://www.ghostchina.com</a></p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Ghost论坛：<br>
+                                            <a href="http://wenda.ghostchina.com" style="color: #5ba4e5;">http://wenda.ghostchina.com</a></p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">官方微博：<br>
+                                            <a href="http://weibo.com/ghostchinacom" style="color: #5ba4e5;">http://weibo.com/ghostchinacom</a></p>
                                         <!-- END OF EMAIL CONTENT -->
 
                                     </td>
@@ -40,7 +45,7 @@
                             <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td class="footer-cell" align="right" style="color: #888888; font-family: sans-serif; font-size: 11px; line-height: 1.3; padding: 0 0 20px 0;">
-                                        Sent by <a href="{{siteUrl}}" style="color: #5ba4e5;">{{siteUrl}}</a>
+                                        此邮件由 <a href="{{siteUrl}}" style="color: #5ba4e5;">{{siteUrl}}</a> 发出。
                                     </td>
                                 </tr>
                             </table>
