--- a/src/core/server/email-templates/invite-user.html
+++ b/src/core/server/email-templates/invite-user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN       " "http://www.w3.org/TR/html4/loose.dtd">
 
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     
@@ -21,12 +21,19 @@
                                     <td class="content-cell" width="100%">
 
                                         <!-- START OF EMAIL CONTENT -->
-                                        <h1 style="color: #212425; font-family: sans-serif; font-size: 28px; font-weight: 600; letter-spacing: -1px; line-height: 1.1; margin: 0.4em 0 0.8em 0; padding: 0;">Welcome</h1>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><strong>{{blogName}}</strong> is using Ghost to publish things on the internet! {{invitedByName}} has invited you to join. Please click on the link below to activate your account.</p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><a href="{{resetLink}}" style="color: #5ba4e5;">Click here to activate your account</a></p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><strong>No idea what Ghost is?</strong> It's a simple, beautiful platform for running an online blog or publication. Writers, businesses and individuals from all over the world use Ghost to publish their stories and ideas. <a href="http://ghost.org" style="color: #5ba4e5;">Find out more</a>.</p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">If you have trouble activating your {{blogName}} account, you can reach out to {{invitedByName}} on {{invitedByEmail}} for assistance.</p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Have fun, and good luck!</p>
+                                        <h1 style="color: #212425; font-family: sans-serif; font-size: 28px; font-weight: 600; letter-spacing: -1px; line-height: 1.1; margin: 0.4em 0 0.8em 0; padding: 0;">欢迎加入 Ghost</h1>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><strong>{{blogName}}</strong> 是基于 Ghost 搭建的博客！ {{invitedByName}} 邀请你加入共同创作。请通过下面的链接，激活你的测试账号。</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><a href="{{resetLink}}" style="color: #5ba4e5;">点击这里激活的你的测试账号</a></p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><strong>不了解Ghost博客?</strong> Ghost博客是一个纯粹的内容写作和发布平台。简单易用的写作编辑器，让你可以沉浸在内容创作中，享受写作的乐趣。 <a href="http://www.ghostchina.com" style="color: #5ba4e5;">了解更多</a>.</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">如果你对 {{blogName}} 博客上的账号有疑问, 可以向 {{invitedByName}} （{{invitedByEmail}}） 咨询。</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">与 {{invitedByName}} 一起享受创作的乐趣吧！</p>
+                                        <br><br>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Ghost中国：<br>
+                                            <a href="http://www.ghostchina.com" style="color: #5ba4e5;">http://www.ghostchina.com</a></p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Ghost论坛：<br>
+                                            <a href="http://wenda.ghostchina.com" style="color: #5ba4e5;">http://wenda.ghostchina.com</a></p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">官方微博：<br>
+                                            <a href="http://weibo.com/ghostchinacom" style="color: #5ba4e5;">http://weibo.com/ghostchinacom</a></p>
                                         <!-- END OF EMAIL CONTENT -->
 
                                     </td>
@@ -37,7 +44,7 @@
                             <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td class="footer-cell" align="right" style="color: #888888; font-family: sans-serif; font-size: 11px; line-height: 1.3; padding: 0 0 20px 0;">
-                                        Sent by <a href="{{siteUrl}}" style="color: #5ba4e5;">{{siteUrl}}</a>
+                                        此邮件由 <a href="{{siteUrl}}" style="color: #5ba4e5;">{{siteUrl}}</a> 发出。
                                     </td>
                                 </tr>
                             </table>
