--- a/src/core/server/email-templates/reset-password.html
+++ b/src/core/server/email-templates/reset-password.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN       " "http://www.w3.org/TR/html4/loose.dtd">
 
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
@@ -22,9 +22,15 @@
 
                                         <!-- START OF EMAIL CONTENT -->
                                         <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;"><strong>Hello!</strong></p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">A request has been made to reset your password on <a href="{{ siteUrl }}" style="color: #5ba4e5;">{{ siteUrl }}</a>.</p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Please follow the link below to reset your password:<br><br>  <a href="{{ resetUrl }}" style="color: #5ba4e5;">Click here to reset your password</a></p>
-                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Ghost</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">你在 <a href="{{ siteUrl }}" style="color: #5ba4e5;">{{ siteUrl }}</a> 网站提交了重置密码的申请。</p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">请点击下面的链接重置密码吧：<br><br>  <a href="{{ resetUrl }}" style="color: #5ba4e5;">点击这里重置密码</a></p>
+                                        <br><br>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Ghost中国：<br>
+                                            <a href="http://www.ghostchina.com" style="color: #5ba4e5;">http://www.ghostchina.com</a></p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">Ghost论坛：<br>
+                                            <a href="http://wenda.ghostchina.com" style="color: #5ba4e5;">http://wenda.ghostchina.com</a></p>
+                                        <p style="color: #828282; font-family: sans-serif; font-size: 15px; font-weight: normal; line-height: 1.5em; margin: 0; padding: 0 0 1.5em 0;">官方微博：<br>
+                                            <a href="http://weibo.com/ghostchinacom" style="color: #5ba4e5;">http://weibo.com/ghostchinacom</a></p>
                                         <!-- END OF EMAIL CONTENT -->
 
                                     </td>
@@ -35,7 +41,7 @@
                             <table class="footer" width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td class="footer-cell" align="right" style="color: #888888; font-family: sans-serif; font-size: 11px; line-height: 1.3; padding: 0 0 20px 0;">
-                                        Sent by <a href="{{siteUrl}}" style="color: #5ba4e5;">{{siteUrl}}</a>
+                                        此邮件由  <a href="{{siteUrl}}" style="color: #5ba4e5;">{{siteUrl}}</a> 发出。
                                     </td>
                                 </tr>
                             </table>
