--- a/src/core/server/email-templates/raw/reset-password.html
+++ b/src/core/server/email-templates/raw/reset-password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 
-<html lang="zh-cn">
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style>
@@ -94,12 +94,9 @@
 
                                         <!-- START OF EMAIL CONTENT -->
                                         <p><strong>Hello!</strong></p>
-                                        <p>你在 <a href="{{ siteUrl }}">{{ siteUrl }}</a> 网站提交了重置密码的申请。</p>
-                                        <p>请点击下面的链接重置密码吧：<br><br>  <a href="{{ resetUrl }}">点击这里重置密码</a></p>
-                                        <br><br>
-                                        <p>Ghost中国：<a href="http://www.ghostchina.com">http://www.ghostchina.com</a></p>
-                                        <p>Ghost论坛：<a href="http://wenda.ghostchina.com">http://wenda.ghostchina.com</a></p>
-                                        <p>官方微博：<a href="http://weibo.com/ghostchinacom">http://weibo.com/ghostchinacom</a></p>
+                                        <p>A request has been made to reset your password on <a href="{{ siteUrl }}">{{ siteUrl }}</a>.</p>
+                                        <p>Please follow the link below to reset your password:<br><br>  <a href="{{ resetUrl }}">Click here to reset your password</a></p>
+                                        <p>Ghost</p>
                                         <!-- END OF EMAIL CONTENT -->
 
                                     </td>
